# End_2_End_Text_Classification

./: .dockerignore  .env  .gitignore  README.md  docker-compose-feature-pipeline.yaml  docker-compose-training-pipeline.yaml
.github/workflows/: ci.yml
containers/feature_pipeline/: Dockerfile  requirements.txt
containers/feature_pipeline/configs/: prometheus.yaml  statsd.yaml
containers/training_pipeline/: Dockerfile
containers/training_pipeline/minio/: create-bucket.sh
deployment/inference/: MANIFEST.in  pyproject.toml  tox.ini
deployment/inference/requirements/: requirements.txt  requirements_test.txt  requirements_type.txt
deployment/inference/tests/: conftest.py  test_prediction.py
deployment/inference/xgboost_model/: constants.py  feature_generation.py  predict.py  utils.py  validation.py
deployment/serving_api/: requirements.txt  requirements_type.txt  tox.ini
deployment/serving_api/app/: config.py  main.py  routes.py  schemas.py
deployment/serving_api/tests/: conftest.py  test_api.py
feature_pipeline/dags/: apply_feast.py  generate_cleaned_features.py  generate_embeddings.py  generate_meta_features.py  preprocess.py
feature_pipeline/src/: __init__.py  cleaned_features.py  config.py  data_quality_check.py  embeddings.py  feature_store.py  logger.py  meta_features.py  preprocessing.py  utils.py
feature_store/feature_repo/: feature_definition.py  feature_store.yaml
feature_store/feature_repo/data/: online_store.db  registry.db
training/: predict_with_llama.py  requirements.txt  run_experiment.py  train_best_model.py
training/src/: __init__.py  config_validation.py  configs.py  constants.py  dataset.py  engine.py  feast_utils.py  hp_tuner.py  llm_client.py  logger.py  metrics.py  models.py  preprocessor.py  registry.py  trainer.py  utils.py
